--- a/index.html
+++ b/index.html
@@ -41,10 +41,17 @@
         var angle_rad = Math.PI / 180 * angle_deg;
         var horizontal = 2 * size * Math.cos(angle_rad); 
         var vertical   = 3 * size * Math.sin(angle_rad);
-        board += create_hex(x, y, size, "aa5");
-        board += create_hex(x + horizontal/2, y + vertical, size, "a05");
-        board += create_hex(x + horizontal, y, size, "0a5");
-        
+
+        var board_data = [
+           [0, 0, "aa5"],
+           [2, 0, "0a5"],
+           [1, 1, "a05"]
+        ];
+        for (var i=0; i < board_data.length; i++) {
+            var b = board_data[i];
+            board += create_hex(x + b[0] * horizontal / 2, y + b[1] * vertical, size, b[2]);
+        }
+
         document.getElementById("board").innerHTML = board;
         
         var elems = document.getElementsByClassName("hex");
