--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
+  <title>Hexa game</title>
+</head>
+<body>
+
 <svg id="board" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="300" xmlns:xlink="http://www.w3.org/1999/xlink">
 </svg>
+ 
+</body>
+</html>
 
 <script>
 (function() {
