tell the browser not to cache the javascript file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 </body>
 </html>
 
-<script src="hexagon.js"></script>
+<script>
+document.write('<script src="hexagon.js?ts=' + (new Date()).getTime() +'"><\/script>')
 </script>
 
 
