--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-<a href="#editor">editor</a> <a href="#example">example</a>
+<a href="#editor">editor</a>
+<a href="#example">example</a>
+<a href="#game1">game1</a>
 
 <svg id="board" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="300" xmlns:xlink="http://www.w3.org/1999/xlink">
 </svg>
