--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 <svg id="board" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="300" xmlns:xlink="http://www.w3.org/1999/xlink">
 </svg>
 
+
+<img style="visibility:hidden" id="tin-soldier" src="tin-soldier.svg" />
+
+<!--
+
+<h3>Source of drawings</h3>
+<a href="https://www.flaticon.com/free-icon/tin-soldier_99111">tin-soldier</a>
+-->
+
 </body>
 </html>
 
