add paging; add about page

--- a/index.html
+++ b/index.html
@@ -10,9 +10,27 @@
 <a href="#editor">editor</a>
 <a href="#example">example</a>
 <a href="#game1">game1</a>
+<a href="#about">about</a>
 
+<div class="page" id="game">
 <svg id="board" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="300" xmlns:xlink="http://www.w3.org/1999/xlink">
 </svg>
+</div>
+
+<div class="page" id="about">
+<h2>About Hexagon</h2>
+<h3>Source</h3>
+Being written by Gabor Szabo. Source can be found on <a href="https://github.com/szabgab/hexagon">GitHub</a>.
+<h3>Rules - Game 1</h3>
+<ul>
+  <li>A simple board with two players.</li>
+  <li>Each player has one territory and on that one soldier.</li>
+  <li>In each move they can move N distance, and enlarge the territory.</li>
+  <li>When no more free territory is left the game is over. The one with more territory wins.</li>
+</ul>
+<h3>Rules - based on Antiyoy</h3>
+TBD.
+</div>
 
 
 <img style="visibility:hidden" id="tin-soldier" src="tin-soldier.svg" />
